refactor(models): :wrench: openapi-codegen upgrade
