# models/api.gen.go
@@ -1,19 +1,10 @@
 // Package models provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.5.0 DO NOT EDIT.
 package models
 
 import (
 	"github.com/a-h/templ"
-)
-
-// Defines values for Action.
-const (
-	ActionEdit   Action = "edit"
-	ActionRead   Action = "read"
-	ActionRemove Action = "remove"
-	ActionSave   Action = "save"
-	ActionUnread Action = "unread"
 )
 
 // Defines values for ImportSource.
@@ -56,9 +47,6 @@ const (
 	ViewRead   View = "read"
 	ViewUnread View = "unread"
 )
-
-// Action defines an operation to change the state of objects.
-type Action string
 
 // ArticleFilters defines model for ArticleFilters.
 type ArticleFilters struct {
@@ -150,7 +138,7 @@ type Response struct {
 	StatusCode int `json:"status_code"`
 
 	// Template is a template to render in the response.
-	Template templ.Component `json:"template,omitempty"`
+	Template templ.Component `json:"template,omitempty,omitzero"`
 }
 
 // SearchRequest represents a search request by the user.
@@ -177,13 +165,13 @@ type SortOrder string
 // SubscriptionEdit defines model for SubscriptionEdit.
 type SubscriptionEdit struct {
 	// Categories is a custom list of categories for an object.
-	Categories []Category `form:"user_categories" json:"categories,omitempty" validate:"omitempty,unique"`
+	Categories []Category `form:"user_categories" json:"categories,omitempty,omitzero" validate:"omitempty,unique"`
 
 	// SubscriptionID is the unique ID of a subscription.
 	SubscriptionID SubscriptionID `form:"subscription_id" json:"subscription_id" validate:"required,startswith=sub_"`
 
 	// Title is a friendly name or nickname for an object.
-	Title string `form:"user_nickname" json:"title,omitempty" validate:"omitempty"`
+	Title string `form:"user_nickname" json:"title,omitempty,omitzero" validate:"omitempty"`
 }
 
 // SubscriptionFilters defines model for SubscriptionFilters.
@@ -216,7 +204,7 @@ type SubscriptionRequest struct {
 	URL string `form:"url" json:"URL" validate:"required,url"`
 
 	// Categories a list  custom categories for the subscription. Combined with the feed's own categories.
-	Categories []Category `form:"user_categories" json:"categories,omitempty"`
+	Categories []Category `form:"user_categories" json:"categories,omitempty,omitzero"`
 
 	// Nickname a custom name for the subscription. Overrides the feed name.
 	Nickname *string `form:"user_nickname" json:"nickname,omitempty"`
@@ -246,7 +234,7 @@ type UserSignupRequest struct {
 
 	// Msg represents a message that can be displayed to the user as the result of an action.
 	Msg      *UserMessage `json:"msg,omitempty"`
-	Nickname string       `form:"nickname,omitempty" json:"nickname,omitempty" validate:"omitempty"`
+	Nickname string       `form:"nickname,omitempty" json:"nickname,omitempty,omitzero" validate:"omitempty"`
 	Password string       `form:"password" json:"password" validate:"required,min=10"`
 }
 
